# budgete-rs

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  Makefile  TODO  dev.sh  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml  docker.yml
mocks/: amex_sample.csv  nordea_sample.csv
