[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/web",
    "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
rust_decimal = { version = "1", features = ["serde"] }

# workspace crates
ui = { path = "packages/ui" }
api = { path = "packages/api" }
